--- a/css/style.css
+++ b/css/style.css
@@ -1,166 +1,123 @@
-.container {
-  top: 0px;
-  left: 0px;
-  width: 1560px;
-  height: 720px;
-  background: #fafafa 0% 0% no-repeat padding-box;
-  opacity: 1;
-  position: relative;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+body {
+    background: #FAFAFA 0% 0% no-repeat padding-box;
+    opacity: 1;
+    font-family: 'Roboto';
 }
 
-#img1 {
-  top: 72px;
-  position: absolute;
-  left: 166px;
-  width: 576px;
-  height: 576px;
-  border-radius: 3000px;
-  background: transparent url("Images/hero-image.png") 0% 0% no-repeat padding-box;
-  box-shadow: 0px 4px 31px #0000000a;
-  border: 20px solid #ffffff;
-  opacity: 1;
+@media screen and (min-width: 1050px){
+    .container-fluid {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .main_image {
+        margin-left: 10%;
+        margin-right: 10%;
+        width: 37%;
+        height: 37%;
+    }
+    .discription {width: 67%;}
+    .login-btn {width: 21%;}
+    .container2 {
+        margin-top: 106px;
+    }
 }
-.left-part {
-  width: 272px;
-  height: 58px;
+@media screen and (max-width:1050px) {
+    .container2 {
+        width: 70%;
+        margin: auto;
+        margin-top: 30px;
+    }
+    .main_image {
+        margin-left: 20%;
+        margin-right: 20%;
+        width: 60%;
+        height: 60%;
+    }
+    .discription {}
+    .login-btn {width: 21%;}
 }
+@media screen and (max-width:600px){
+    .container3 {
+        flex-direction: column;
+    }
+    .login-btn {
+        width: 40%
+    }
+    .discription {
+        font: normal normal 300 30px/47px Roboto;
+    }
+}
+@media screen and (min-width:600px) {
+    .container3 {
+        align-items: center;    
+    }
+    .discription {
+        font: normal normal 300 40px/47px Roboto;
+    }
 
-#img2 {
-  position: absolute;
-  top: 106px;
-  left: 906px;
-  width: 272px;
-  height: 58px;
-  opacity: 1;
 }
-.txt {
-  top: 183px;
-  left: 905px;
-  width: 500px;
-  height: 50px;
-  text-align: left;
-  color: #3e3e3e;
-  opacity: 1;
-  position: absolute;
+.main_image{
+    margin-top: 72px;
+    border-radius: 50%;
+    box-shadow: 0px 4px 31px #0000000A;
+    border: 20px solid #FFFFFF;
+    opacity: 1;
 }
-
-#exp {
-  top: 183px;
-  left: 1036px;
-  width: 137px;
-  height: 53px;
-  text-align: left;
-  color: #c8242f;
-  opacity: 1;
+.container2 {
+    display: flex;
+    flex-direction: column;
+    /* margin-top: 106px; */
+    /* margin-left: 164px; */
 }
-
-.login {
-  top: 315px;
-  left: 905px;
-  width: 260px;
-  height: 33px;
-  text-align: left;
-  color: #3e3e3e;
-  position: absolute;
+.logo {  
+    width: 272px;
+    height: 58px;
 }
-.box1 {
-  top: 372px;
-  left: 907px;
-  width: 429px;
-  height: 49px;
-  background: #ffffff 0% 0% no-repeat padding-box;
-  border: 1px solid #adadad;
-  border-radius: 5px;
-  opacity: 1;
-  position: absolute;
+.discription {
+    margin-top: 19px;
+    text-align: left;
+    /* font: normal normal 300 40px/47px Roboto; */
+    letter-spacing: 0px;
+    color: #3E3E3E;
+    opacity: 1;
 }
-#user {
-
-  color: #adadad;
-  margin-top: 14px;
-  margin-left: 14px;
-  margin-bottom: 14px;
+.color-red {
+    color: #C8242F;
 }
-
-.box2 {
-  position: absolute;
-  top: 448px;
-  left: 907px;
-  width: 429px;
-  height: 49px;
-  background: #ffffff 0% 0% no-repeat padding-box;
-  border: 1px solid #adadad;
-  border-radius: 5px;
-  opacity: 1;
+.titlelogin {
+    margin-top: 31px;
+    text-align: left;
+    font: normal normal normal 25px/33px Roboto;
+    letter-spacing: 0px;
+    color: #3E3E3E;
+    opacity: 1;
 }
-
-#pass {
-  margin-top: 14px;
-  margin-left: 14px;
-  margin-bottom: 14px;
-  color: #adadad;
+.container2 input{
+    padding-left: 14px;
+    margin-bottom: 27px;
+    width: 70%;
+    height: 49px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #ADADAD;
+    border-radius: 5px;
+    opacity: 1;
 }
-
-.log {
-  position: absolute;
-  top: 527px;
-  left: 906px;
-  width: 138px;
-  height: 45px;
-  background: #c8242f 0% 0% no-repeat padding-box;
-  border-radius: 23px;
-  opacity: 1;
+.container3{
+    margin-top: 3px;
+    margin-bottom: 23px;
+    display: flex;
+    /* justify-content: space-between; */
 }
-
-#log2 {
-  margin-top: 12px;
-  margin-left: 46px;
-  margin-bottom: 10px;
-  width: 45px;
-  height: 24px;
-  text-align: left;
-  font: normal normal medium 18px/24px Roboto;
-  letter-spacing: 0px;
-  color: #ffffff;
-  opacity: 1;
+.login-btn {
+    height: 45px;
+    margin-right: 26%;
+    background: #C8242F 0% 0% no-repeat padding-box;
+    border-radius: 23px;
+    border: none;
+    color: white;
 }
-.fpass {
-  top: 523px;
-  left: 1214px;
-  width: 121px;
-  height: 20px;
-  position: absolute;
-  text-align: left;
-  font: normal normal normal 15px/20px Roboto;
-  letter-spacing: 0px;
-  color: #adadad;
-  opacity: 1;
-}
-.new {
-  top: 595px;
-  left: 906px;
-  width: 160px;
-  height: 20px;
-  position: absolute;
-  text-align: left;
-  font: normal normal normal 15px/20px Roboto;
-  letter-spacing: 0px;
-  color: #adadad;
-  opacity: 1;
-}
-.reg {
-  top: 595px;
-  left: 1056px;
-  width: 88px;
-  height: 20px;
-  position: absolute;
-  text-align: left;
-  font: normal normal normal 15px/20px Roboto;
-  letter-spacing: 0px;
-  color: #c8242f;
-  opacity: 1;
-}
-
 /* dashboard css */
 
 .dcontainer {
@@ -262,12 +219,23 @@
   border-radius: 5px;
   justify-content: center;
 }
+#actives {
+  top: 25px;
+  left: 30px;
+  width: 183px;
+  height: 43px;
+  position: absolute;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  justify-content: center;
+}
+
 #dashboard {
   position: absolute;
   margin-top: 14px;
   margin-left: 17.5px;
   width: 15px;
-  height: 15px;
+  height: 15px;55555555555555555555555555
 }
 #dashtxt {
   margin-top: 10px;
@@ -277,7 +245,17 @@
   position: absolute;
   text-align: left;
   letter-spacing: 0px;
-  color: #c8242f;
+  color: #3e3e3e;
+}
+#dashtxt1 {
+  margin-top: 12px;
+  margin-left: 45px;
+  width: 78px;
+  height: 21px;
+  position: absolute;
+  text-align: left;
+  letter-spacing: 0px;
+  color:#C8242F;
 }
 #analysis {
   top: 85px;
@@ -296,6 +274,28 @@
   letter-spacing: 0px;
   color: #3e3e3e;
 }
+
+#anatxt1 {
+  top: 83px;
+  left: 75px;
+  width: 60px;
+  height: 21px;
+  position: absolute;
+  text-align: left;
+  letter-spacing: 0px;
+  color: #C8242F;
+}
+#rbox{
+  top: 75px;
+  left: 30px;
+  width: 183px;
+  height: 43px;
+  position: absolute;
+  background: #fff3f4 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  justify-content: center;
+}
+
 #inbox {
   position: absolute;
   top: 131px;
@@ -682,6 +682,51 @@ background: #FAFAFA 0% 0% no-repeat padding-box;
   position: absolute;
   background: #FFFFFF 0% 0% no-repeat padding-box;
 }
+#active2 {
+  top: 78px;
+  left: 30px;
+  width: 183px;
+  height: 43px;
+  position: absolute;
+  background: #FFF3F4 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  justify-content: center;
+}
+
+#dashboard2 {
+  position: absolute;
+  top: 40px;
+  left: 46px;
+  width: 15px;
+  height: 15px;
+}
+#dashtxt2 {
+  top: 37px;
+  left: 75px;
+  width: 78px;
+  height: 21px;
+  position: absolute;
+  text-align: left;
+  color: #3E3E3E;
+ 
+}
+#analysis2 {
+  margin-top: 12.75px;
+  margin-left: 15.62px;
+  width: 19px;
+  height: 18px;
+  position: absolute;
+}
+
+#anatxt2 {
+  margin-top: 10px;
+  margin-left: 45px;
+  width: 60px;
+  height: 21px;
+  position: absolute;
+  text-align: left;
+  color: #C8242F;
+}
 #form {
   position: absolute;
   top: 182px;
@@ -763,10 +808,129 @@ select:invalid{
   font-size: 20px;
   font-weight: bold;
 }
+#up{
+  color:#c8242f;
+}
 #radio{
   margin-top: 36.15px;
   margin-left: 29px;
   color: #3E3E3E;
   font-size: 20px;
   font-weight: bold;
+}
+#checkbox{
+  margin-top: 32.52px;
+  margin-left: 29px;
+  color: #3E3E3E;
+  font-size: 20px;
+  font-weight: bold;
+}
+#snackbar{
+  margin-top: 34.52px;
+  margin-left: 29px;
+  color: #3E3E3E;
+  font-size: 20px;
+  font-weight: bold;
+}
+.btn{
+  border: 1px solid  #FF3B3B ;
+  border-radius: 20px;
+}
+#item{
+  margin-left: 14px;
+  font-size: 12px;
+  color: #ADADAD;
+}
+#error{
+  width: 17px;
+  height: 17px;
+}
+#column{
+  height: 44px;
+  border: 1px solid red;
+  border-radius: 8px;
+  padding-top:8px ;
+}
+#column2{
+  height: 44px;
+  border: 1px solid #00B9E1;
+  border-radius: 8px;
+  margin-left: 30px;
+  padding-top: 8px;
+}
+#information{
+  width: 17px;
+  height: 17px;
+}
+#column3{
+  height: 44px;
+  border: 1px solid #FFA800;
+  border-radius: 8px;
+  padding-top: 8px;
+}
+#warning{
+  width: 16px;
+  height: 15px;
+}
+#column4{
+  height: 44px;
+  border: 1px solid #00AF27;
+  border-radius: 8px;
+  margin-left: 30px;
+  padding-top: 8px;
+}
+#success{
+  width: 16px;
+  height: 15px;  
+}
+#action{
+  margin-top: 34.52px;
+  margin-left: 29px;
+  color: #3E3E3E;
+  font-size: 20px;
+  font-weight: bold;
+}
+.btn1{
+  border-radius: 20px;
+  background-color: #C8242F;
+  border: 1px solid #C8242F;
+  color: #FFFFFF;
+ height: 35px;
+ width: 105px;
+}
+.btn2{
+   border-radius: 20px;
+   background-color:  #FFFFFF;
+   border: 1px solid #C8242F;
+   color:#C8242F;
+  height: 35px;
+  width: 115px;
+  margin-left: 20px;
+}
+#tab{
+  margin-top: 34.52px;
+  margin-left: 29px;
+  color: #3E3E3E;
+  font-size: 20px;
+  font-weight: bold;
+}
+.tab{
+  display: flex;
+  margin-left: 25px;
+  border-bottom: 1px solid #ADADAD;
+}
+.tab >div{
+  padding: 18px;
+}
+#infotxt{
+  color:#00B9E1;
+}
+#errortxt{
+  color:#FF3535;
+}
+#warningtxt{
+  color: #FFA800;
+}
+#successtxt{
+  color:#00AF27;
 }
