--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ body {
   margin-top: 14px;
   margin-left: 17.5px;
   width: 15px;
-  height: 15px;55555555555555555555555555
+  height: 15px;
 }
 #dashtxt {
   margin-top: 10px;
