--- a/css/style.css
+++ b/css/style.css
@@ -118,819 +118,121 @@ body {
     border: none;
     color: white;
 }
-/* dashboard css */
-
-.dcontainer {
-  top: 0px;
-  left: 0px;
-  width: 1560px;
-  height: 1359px;
-  position: relative;
-  background: #fafafa 0% 0% no-repeat padding-box;
-}
-.head {
-  top: 0px;
-  left: 0px;
-  width: 1560px;
-  height: 80px;
-  position: absolute;
-  background: #ffffff 0% 0% no-repeat padding-box;
-}
-#menu-bar {
-  top: 34px;
-  left: 29px;
-  width: 22px;
-  height: 16px;
-  position: absolute;
-}
-#company {
-  position: absolute;
-  top: 25px;
-  left: 72px;
-  width: 142px;
-  height: 30px;
-}
-#search {
-  position: absolute;
-  top: 32px;
-  left: 291px;
-  width: 16px;
-  height: 16px;
-}
-#searchtxt {
-  position: absolute;
-  top: 28px;
-  left: 321px;
-  width: 49px;
-  height: 21px;
-  text-align: left;
-  font: normal normal normal 16px/21px Roboto;
-  letter-spacing: 0px;
-  color: #000000;
-}
-#notification {
-  position: absolute;
-  top: 28px;
-  left: 1294px;
-  width: 22px;
-  height: 21px;
-}
-#profile {
-  top: 18px;
-  left: 1368px;
-  width: 44px;
-  height: 44px;
-  position: absolute;
-}
-#name {
-  top: 28px;
-  left: 1424px;
-  width: 68px;
-  height: 21px;
-  position: absolute;
-  text-align: left;
-  font: normal normal normal 16px/21px Roboto;
-  letter-spacing: 0px;
-  color: #000000;
-}
-#aerrow {
-  position: absolute;
-  top: 37px;
-  left: 1507px;
-  width: 15px;
-  height: 11px;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+body {
+    background: #FAFAFA 0% 0% no-repeat padding-box;
+    opacity: 1;
+    font-family: 'Roboto';
 }
 
-.sidebar {
-  top: 80px;
-  left: 0px;
-  width: 242px;
-  height: 1279px;
-  position: absolute;
-  background: #ffffff 0% 0% no-repeat padding-box;
+@media screen and (min-width: 1050px){
+    .index {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .main_image {
+        margin-left: 10%;
+        margin-right: 10%;
+        width: 37%;
+        height: 37%;
+    }
+    .discription {width: 67%;}
+    .login-btn {width: 21%;}
+    .container2 {
+        margin-top: 106px;
+    }
 }
-#active {
-  top: 25px;
-  left: 30px;
-  width: 183px;
-  height: 43px;
-  position: absolute;
-  background: #fff3f4 0% 0% no-repeat padding-box;
-  border-radius: 5px;
-  justify-content: center;
+@media screen and (max-width:1050px) {
+    .container2 {
+        width: 70%;
+        margin: auto;
+        margin-top: 30px;
+    }
+    .main_image {
+        margin-left: 20%;
+        margin-right: 20%;
+        width: 60%;
+        height: 60%;
+    }
+    .discription {}
+    .login-btn {width: 21%;}
 }
-#actives {
-  top: 25px;
-  left: 30px;
-  width: 183px;
-  height: 43px;
-  position: absolute;
-  background: #ffffff 0% 0% no-repeat padding-box;
-  border-radius: 5px;
-  justify-content: center;
+@media screen and (max-width:600px){
+    .container3 {flex-direction: column;}
+    .login-btn {width: 40%}
+    .discription {font: normal normal 300 30px/47px Roboto;}
+    .logo {  
+        width: 200px;
+        height: 58px;
+    }
 }
-
-#dashboard {
-  position: absolute;
-  margin-top: 14px;
-  margin-left: 17.5px;
-  width: 15px;
-  height: 15px;
+@media screen and (min-width:600px) {
+    .container3 {
+        align-items: center;    
+    }
+    .discription {
+        font: normal normal 300 40px/47px Roboto;
+    }
+    .logo {  
+        width: 272px;
+        height: 58px;
+    }
 }
-#dashtxt {
-  margin-top: 10px;
-  margin-left: 45px;
-  width: 78px;
-  height: 21px;
-  position: absolute;
-  text-align: left;
-  letter-spacing: 0px;
-  color: #3e3e3e;
+.main_image{
+    margin-top: 72px;
+    border-radius: 50%;
+    box-shadow: 0px 4px 31px #0000000A;
+    border: 20px solid #FFFFFF;
+    opacity: 1;
 }
-#dashtxt1 {
-  margin-top: 12px;
-  margin-left: 45px;
-  width: 78px;
-  height: 21px;
-  position: absolute;
-  text-align: left;
-  letter-spacing: 0px;
-  color:#C8242F;
-}
-#analysis {
-  top: 85px;
-  left: 46px;
-  width: 19px;
-  height: 18px;
-  position: absolute;
-}
-#anatxt {
-  top: 83px;
-  left: 75px;
-  width: 60px;
-  height: 21px;
-  position: absolute;
-  text-align: left;
-  letter-spacing: 0px;
-  color: #3e3e3e;
+.container2 {
+    display: flex;
+    flex-direction: column;
 }
 
-#anatxt1 {
-  top: 83px;
-  left: 75px;
-  width: 60px;
-  height: 21px;
-  position: absolute;
-  text-align: left;
-  letter-spacing: 0px;
-  color: #C8242F;
-}
-#rbox{
-  top: 75px;
-  left: 30px;
-  width: 183px;
-  height: 43px;
-  position: absolute;
-  background: #fff3f4 0% 0% no-repeat padding-box;
-  border-radius: 5px;
-  justify-content: center;
-}
-
-#inbox {
-  position: absolute;
-  top: 131px;
-  left: 48px;
-  width: 15px;
-  height: 15px;
-}
-#inbtxt {
-  position: absolute;
-  top: 129px;
-  left: 75px;
-  width: 39px;
-  height: 21px;
-  text-align: left;
-  letter-spacing: 0px;
-  color: #3e3e3e;
-}
-#history {
-  position: absolute;
-  top: 177px;
-  left: 47px;
-  width: 16px;
-  height: 16px;
-}
-#histxt {
-  position: absolute;
-  top: 175px;
-  left: 75px;
-  width: 51px;
-  height: 21px;
-  text-align: left;
-  letter-spacing: 0px;
-  color: #3e3e3e;
-}
-#user-logo {
-  position: absolute;
-  top: 222px;
-  left: 48px;
-  width: 12px;
-  height: 12px;
-}
-#usetxt {
-  position: absolute;
-  top: 218px;
-  left: 75px;
-  width: 41px;
-  height: 21px;
-  text-align: left;
-  letter-spacing: 0px;
-  color: #3e3e3e;
-}
-#Maintenance {
-  position: absolute;
-  top: 269px;
-  left: 48px;
-  width: 13px;
-  height: 18px;
-}
-#mentxt {
-  position: absolute;
-  top: 267px;
-  left: 75px;
-  width: 92px;
-  height: 21px;
-  text-align: left;
-  letter-spacing: 0px;
-  color: #3e3e3e;
-}
-#setting {
-  position: absolute;
-  top: 315px;
-  left: 47px;
-  width: 17px;
-  height: 17px;
-}
-#settxt {
-  position: absolute;
-  top: 313px;
-  left: 75px;
-  width: 50px;
-  height: 21px;
-  text-align: left;
-  letter-spacing: 0px;
-  color: #3e3e3e;
-}
-#dash {
-  top: 121px;
-  left: 290px;
-  width: 146px;
-  height: 39px;
-  position: absolute;
-  text-align: left;
-  font: normal normal medium 40px/39px Roboto;
-  letter-spacing: 0px;
-  color: #000000;
-  font-size: 30px;
-}
-#newproduct {
-  top: 182px;
-  left: 292px;
-  width: 219px;
-  height: 116px;
-  position: absolute;
-  background: #ffffff 0% 0% no-repeat padding-box;
-}
-#star {
-  margin-top: 42px;
-  margin-left: 38px;
-  width: 33px;
-  height: 33px;
-  position: absolute;
-}
-#newproducttxt {
-  margin-top: 35px;
-  margin-left: 90px;
-  position: absolute;
-}
-#number1 {
-  font-size: 26px;
-}
-#addedproduct {
-  top: 182px;
-  left: 541px;
-  width: 219px;
-  height: 116px;
-  position: absolute;
-  background: #ffffff 0% 0% no-repeat padding-box;
-}
-#addproductlogo {
-  margin-top: 42px;
-  margin-left: 38px;
-  width: 26px;
-  height: 26px;
-}
-#addedproducttxt {
-  top: 31px;
-  left: 87px;
-  position: absolute;
-}
-#number2 {
-  font-size: 26px;
-}
-#totalproduct {
-  top: 182px;
-  left: 791px;
-  width: 219px;
-  height: 116px;
-  position: absolute;
-  background: #ffffff 0% 0% no-repeat padding-box;
-}
-#totalproductlogo {
-  margin-top: 42px;
-  margin-left: 38px;
-  width: 26px;
-  height: 26px;
-}
-#totalproducttxt {
-  top: 31px;
-  left: 87px;
-  position: absolute;
-}
-#number3 {
-  font-size: 26px;
-}
-#todaysale {
-  top: 182px;
-  left: 1040px;
-  width: 219px;
-  height: 116px;
-  position: absolute;
-  background: #ffffff 0% 0% no-repeat padding-box;
-}
-#doller {
-  margin-top: 42px;
-  margin-left: 38px;
-  width: 26px;
-  height: 26px;
-}
-#todaysaletxt {
-  top: 31px;
-  left: 87px;
-  position: absolute;
-}
-#number4 {
-  font-size: 26px;
-}
-#totalsale {
-  top: 182px;
-  left: 1290px;
-  width: 219px;
-  height: 116px;
-  position: absolute;
-  background: #ffffff 0% 0% no-repeat padding-box;
-}
-#moneybag {
-  margin-top: 42px;
-  margin-left: 38px;
-  width: 26px;
-  height: 26px;
-}
-#totalsaletxt {
-  top: 31px;
-  left: 87px;
-  position: absolute;
-}
-#number5 {
-  font-size: 26px;
-}
-#Graph {
-  top: 328px;
-  left: 292px;
-  width: 802px;
-  height: 400px;
-  position: absolute;
-  background: #ffffff 0% 0% no-repeat padding-box;
-}
-#saletxt {
-  color: #3e3e3e;
-  top: 23.52px;
-  left: 30px;
-
-  position: absolute;
-  font-size: 25px;
-  font-weight: bold;
-}
-#wtxt {
-  top: 24.5px;
-  left: 611px;
-  position: absolute;
-  text-align: left;
-  color: #adadad;
-}
-#ytxt {
-  position: absolute;
-  top: 24.5px;
-  left: 740px;
-  color: #c8242f;
-}
-
-#graph-image {
-  position: absolute;
-  top: 90.5px;
-  left: 105.5px;
-  width: 649px;
-  height: 195px;
-}
-
-.pi-chart {
-  top: 330px;
-  left: 1124px;
-  width: 385px;
-  height: 398px;
-  position: absolute;
-  background: #ffffff 0% 0% no-repeat padding-box;
-}
-
-#pi-head {
-  position: absolute;
-  top: 21.52px;
-  left: 29px;
-  font-size: 25px;
-}
-#pi-chart-image {
-  position: absolute;
-  top: 70px;
-  left: 89px;
-}
-
-#us-logo {
-  position: absolute;
-  top: 306px;
-  left: 49px;
-  width: 18px;
-  height: 18px;
-}
-#us-txt {
-  position: absolute;
-  top: 305px;
-  left: 76px;
-}
-
-#canada-logo {
-  position: absolute;
-  top: 306px;
-  left: 268px;
-  width: 18px;
-  height: 18px;
-}
-#canada-txt {
-  position: absolute;
-  top: 305px;
-  left: 295px;
-}
-
-#russia-logo {
-  position: absolute;
-  top: 343px;
-  left: 49px;
-  width: 18px;
-  height: 18px;
-}
-#russia-txt {
-  position: absolute;
-  top: 343px;
-  left: 76px;
-}
-
-#india-logo {
-  position: absolute;
-  top: 343px;
-  left: 268px;
-  width: 18px;
-  height: 18px;
-}
-#india-txt {
-  position: absolute;
-  top: 343px;
-  left: 295px;
-}
-
-.footer {
-  position: absolute;
-  top: 758px;
-  left: 292px;
-  width: 1217px;
-  height: 558px;
-  background: #ffffff 0% 0% no-repeat padding-box;
-}
-#footer-head-rtxt {
-  position: absolute;
-  top: 22.52px;
-  left: 29px;
-  font-size: 22px;
-}
-#footer-head-ltxt {
-  position: absolute;
-  top: 26px;
-  left: 1145px;
-  color: #c8242f;
-  font-size: 12px;
-}
-#table{
-    width: 93%;
-    position: absolute;
-    top: 88.13px;
-    left: 40px;
-
-}
-th, td{
-    padding: 13.15px;
+.discription {
+    margin-top: 19px;
     text-align: left;
+    /* font: normal normal 300 40px/47px Roboto; */
+    letter-spacing: 0px;
+    color: #3E3E3E;
+    opacity: 1;
 }
-th{
-    color: #ADADAD;
+.color-red {
+    color: #C8242F;
 }
-table, th, td{
-    border-bottom: solid 1px black;
+.titlelogin {
+    margin-top: 31px;
+    text-align: left;
+    font: normal normal normal 25px/33px Roboto;
+    letter-spacing: 0px;
+    color: #3E3E3E;
+    opacity: 1;
 }
-#paid{
-    color: #3CDD5F;
+.container2 input{
+    padding-left: 14px;
+    margin-bottom: 27px;
+    width: 70%;
+    height: 49px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #ADADAD;
+    border-radius: 5px;
+    opacity: 1;
 }
-#failed{
-    color: #FF4545;
+.container3{
+    margin-top: 3px;
+    margin-bottom: 23px;
+    display: flex;
+    /* justify-content: space-between; */
 }
-#pending{
-    color: #BABABA;
-}
-
-/* inner page */
-
-#body{
-  top: 0px;
- left: 0px;
-width: 1560px;
-height: 1970px;
-position: relative;
-background: #FAFAFA 0% 0% no-repeat padding-box;
-}
-.innerpagesidebar{
-  top: 80px;
-  left: 0px;
-  width: 242px;
-  height: 1890px;
-  position: absolute;
-  background: #FFFFFF 0% 0% no-repeat padding-box;
-}
-#active2 {
-  top: 78px;
-  left: 30px;
-  width: 183px;
-  height: 43px;
-  position: absolute;
-  background: #FFF3F4 0% 0% no-repeat padding-box;
-  border-radius: 5px;
-  justify-content: center;
+.login-btn {
+    height: 45px;
+    margin-right: 26%;
+    background: #C8242F 0% 0% no-repeat padding-box;
+    border-radius: 23px;
+    border: none;
+    color: white;
 }
 
-#dashboard2 {
-  position: absolute;
-  top: 40px;
-  left: 46px;
-  width: 15px;
-  height: 15px;
-}
-#dashtxt2 {
-  top: 37px;
-  left: 75px;
-  width: 78px;
-  height: 21px;
-  position: absolute;
-  text-align: left;
-  color: #3E3E3E;
- 
-}
-#analysis2 {
-  margin-top: 12.75px;
-  margin-left: 15.62px;
-  width: 19px;
-  height: 18px;
-  position: absolute;
-}
 
-#anatxt2 {
-  margin-top: 10px;
-  margin-left: 45px;
-  width: 60px;
-  height: 21px;
-  position: absolute;
-  text-align: left;
-  color: #C8242F;
-}
-#form {
-  position: absolute;
-  top: 182px;
-  left: 292px;
-  width: 1218px;
-  height: 1749px;
-  background: #FFFFFF 0% 0% no-repeat padding-box
-}
-#Ana{
-  color: #000000;
-  position: absolute;
-  top: 121px;
-  left: 290px;
-  font-size: 30px;
-}
-#onecolumn{
-  margin-top: 22.52px;
-  margin-left: 29px;
-  color: #3E3E3E;
-  font-size: 25px;
-  font-weight: bold;
-}
-.form-group{
-  padding: 14.5px 30px 0px 30px;
-}
-.form-group-2{
-  padding:0px 30px 0px 30px;
-}
-.form-group-3{
-  padding:20px 30px 0px 30px;
-}
-#twocolumn{
-  margin-top: 44px;
-  margin-left: 29px;
-  color: #3E3E3E;
-  font-size: 25px;
-  font-weight: bold;
-}
-.row{
-  padding:15.98px 30.5px 0px 30.5px;
-}
-select:invalid{
- color:  #ADADAD;
-}
-#threecolumn{
-  margin-top: 44px;
-  margin-left: 29px;
-  color: #3E3E3E;
-  font-size: 25px;
-  font-weight: bold;
-}
-#iuser{
-  border: 1px dashed #ADADAD;
-}
-#fourcolumn{
-  margin-top: 44px;
-  margin-left: 29px;
-  color: #3E3E3E;
-  font-size: 25px;
-  font-weight: bold;
-}
-#uiborder{
-  border: 1px solid #FF3B3B;
-}
-#uidesign{
-  color: #FF3B3B;
-}
-#otherdesign{
-  margin-top: 44px;
-  margin-left: 29px;
-  color: #3E3E3E;
-  font-size: 25px;
-  font-weight: bold;
-}
-#fileupload{
-  margin-top: 21.13px;
-  margin-left: 29px;
-  color: #3E3E3E;
-  font-size: 20px;
-  font-weight: bold;
-}
-#up{
-  color:#c8242f;
-}
-#radio{
-  margin-top: 36.15px;
-  margin-left: 29px;
-  color: #3E3E3E;
-  font-size: 20px;
-  font-weight: bold;
-}
-#checkbox{
-  margin-top: 32.52px;
-  margin-left: 29px;
-  color: #3E3E3E;
-  font-size: 20px;
-  font-weight: bold;
-}
-#snackbar{
-  margin-top: 34.52px;
-  margin-left: 29px;
-  color: #3E3E3E;
-  font-size: 20px;
-  font-weight: bold;
-}
-.btn{
-  border: 1px solid  #FF3B3B ;
-  border-radius: 20px;
-}
-#item{
-  margin-left: 14px;
-  font-size: 12px;
-  color: #ADADAD;
-}
-#error{
-  width: 17px;
-  height: 17px;
-}
-#column{
-  height: 44px;
-  border: 1px solid red;
-  border-radius: 8px;
-  padding-top:8px ;
-}
-#column2{
-  height: 44px;
-  border: 1px solid #00B9E1;
-  border-radius: 8px;
-  margin-left: 30px;
-  padding-top: 8px;
-}
-#information{
-  width: 17px;
-  height: 17px;
-}
-#column3{
-  height: 44px;
-  border: 1px solid #FFA800;
-  border-radius: 8px;
-  padding-top: 8px;
-}
-#warning{
-  width: 16px;
-  height: 15px;
-}
-#column4{
-  height: 44px;
-  border: 1px solid #00AF27;
-  border-radius: 8px;
-  margin-left: 30px;
-  padding-top: 8px;
-}
-#success{
-  width: 16px;
-  height: 15px;  
-}
-#action{
-  margin-top: 34.52px;
-  margin-left: 29px;
-  color: #3E3E3E;
-  font-size: 20px;
-  font-weight: bold;
-}
-.btn1{
-  border-radius: 20px;
-  background-color: #C8242F;
-  border: 1px solid #C8242F;
-  color: #FFFFFF;
- height: 35px;
- width: 105px;
-}
-.btn2{
-   border-radius: 20px;
-   background-color:  #FFFFFF;
-   border: 1px solid #C8242F;
-   color:#C8242F;
-  height: 35px;
-  width: 115px;
-  margin-left: 20px;
-}
-#tab{
-  margin-top: 34.52px;
-  margin-left: 29px;
-  color: #3E3E3E;
-  font-size: 20px;
-  font-weight: bold;
-}
-.tab{
-  display: flex;
-  margin-left: 25px;
-  border-bottom: 1px solid #ADADAD;
-}
-.tab >div{
-  padding: 18px;
-}
-#infotxt{
-  color:#00B9E1;
-}
-#errortxt{
-  color:#FF3535;
-}
-#warningtxt{
-  color: #FFA800;
-}
-#successtxt{
-  color:#00AF27;
-}
